[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Unit.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Tiles/98x52/grass_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/SpriteFrames/SpriteFrame.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Assets/Art/UI/selection_border_large.png" type="Texture" id=4]
[ext_resource path="res://Styles/shieldbarbackground.tres" type="StyleBox" id=5]
[ext_resource path="res://Styles/shieldbarvalue.tres" type="StyleBox" id=6]
[ext_resource path="res://Styles/healthbarvalue.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/healthbarbackground.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/Art/UI/selection_border_small.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 39.0

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.501961, 1, 0.380392, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0.388235, 0.0862745, 1 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array(  )
}

[node name="Unit" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sounds" type="Node2D" parent="."]

[node name="TileBase" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Target" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.113725, 0.113725, 1 )
texture = ExtResource( 9 )
region_rect = Rect2( 196, 132, 56, 56 )

[node name="GatherShape" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 1, 0.282353, 0.282353, 1 )
scale = Vector2( 1.75, 1 )
shape = SubResource( 1 )
disabled = true

[node name="Range" type="Area2D" parent="."]
visible = false
scale = Vector2( 1.75, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
modulate = Color( 0.65098, 0.0352941, 0.960784, 0.235294 )
shape = SubResource( 2 )
disabled = true

[node name="FootPrint" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.75, 1 )
shape = SubResource( 3 )

[node name="SelectionBox" type="Sprite" parent="."]
visible = false
texture = ExtResource( 9 )

[node name="VehicleSelectionBox" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.744752, 0.744752 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -59 )
frames = ExtResource( 3 )

[node name="ShieldBar" type="ProgressBar" parent="."]
visible = false
margin_left = -12.0
margin_top = -54.0
margin_right = 14.0
margin_bottom = -51.0
custom_styles/fg = ExtResource( 6 )
custom_styles/bg = ExtResource( 5 )
step = 1.0
value = 80.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -12.0
margin_top = -50.0
margin_right = 14.0
margin_bottom = -47.0
custom_styles/fg = ExtResource( 7 )
custom_styles/bg = ExtResource( 8 )
step = 1.0
value = 80.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BumpBar" type="ProgressBar" parent="."]
visible = false
margin_left = -19.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 4.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 1.0
value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BumpLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -29.0
margin_right = -21.0
margin_bottom = -15.0
grow_horizontal = 0
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BBoxHuman" type="Area2D" parent="."]
input_pickable = false

[node name="Borders" type="CollisionPolygon2D" parent="BBoxHuman"]
visible = false
polygon = PoolVector2Array( 6.43853, -41.2661, -0.0250816, -45.1442, -5.78638, -41.1362, -10.2264, -31.7838, -10.8205, 1.42302, 0.40509, 4.73547, 11.6307, 0.686913, 11.5957, -31.406 )

[node name="BBoxVehicle" type="Area2D" parent="."]
input_pickable = false

[node name="Borders" type="CollisionPolygon2D" parent="BBoxVehicle"]
visible = false
polygon = PoolVector2Array( 24.8958, -36.1723, -0.216873, -41.8601, -22.6854, -36.8671, -47.772, -16.283, -47.0585, 19.6288, -24.6271, 41.0792, 0.0776443, 44.4079, 26.9673, 41.634, 50.84, 22.2023, 49.9134, -19.9571 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 6 )

[node name="BumpTimer" type="Timer" parent="Path2D"]
one_shot = true

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="GatherTimer" type="Timer" parent="."]
one_shot = true

[node name="ConstructionTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="input_event" from="BBoxHuman" to="." method="_on_BBox_input_event"]
[connection signal="mouse_entered" from="BBoxHuman" to="." method="_on_BBox_mouse_entered"]
[connection signal="mouse_exited" from="BBoxHuman" to="." method="_on_BBox_mouse_exited"]
[connection signal="input_event" from="BBoxVehicle" to="." method="_on_BBox_input_event"]
[connection signal="mouse_entered" from="BBoxVehicle" to="." method="_on_BBox_mouse_entered"]
[connection signal="mouse_exited" from="BBoxVehicle" to="." method="_on_BBox_mouse_exited"]
[connection signal="timeout" from="GatherTimer" to="." method="_on_GatherTimer_timeout"]
[connection signal="timeout" from="ConstructionTimer" to="." method="_on_ConstructionTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
